[package]
name = "rust_grpc"
version = "0.1.0"
authors = ["sollimann <kristoffer.solberg@cognite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6.1"
tonic = {version="0.3.1",features = ["tls"]}
tokio = {version="0.3.5",features = ["stream", "macros"]}
futures = "0.3.8"